# imgzen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
imgzen/: _typing.py  main.py  utils.py
picflow/: main.py  utils.py
tests/: test_main.py  test_utils.py
tests/utils/: fixture.py  test_resize_image.py  test_rotate_image.py
