[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgzen"
version = "0.1.2"
description = "Minimalist CLI image editor powered by OpenCV"
authors = [{ name = "yehorn0", email = "nemch.egor.fl@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["opencv-python"]


[project.scripts]
imgzen = "imgzen.main:main"

[tool.setuptools]
packages = ["imgzen"]

[tool.setuptools.package-data]
"imgzen" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "imgzen.__version__" }

[tool.black]
line-length = 108
target-version = ["py39"]

[tool.flake8]
max-line-length = 108
extend-ignore = ["E203", "W503"]
exclude = """
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    tests
"""

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
show_error_codes = true
files = [
    "imgzen",
    "tests"
]
exclude = [
    #"^tests/*",
    "^build/*"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
