[metadata]
name = imgzen
version = 0.1
description = Simple CLI for images using OpenCV
author = Твоє Ім'я
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    opencv-python
python_requires = >=3.8

[options.entry_points]
console_scripts =
    imgzen = imgzen.main:main

[options.package_data]
* = *.md

[tool:pytest]
testpaths = tests
